--- a/h2.md
+++ b/h2.md
@@ -90,7 +90,11 @@ Jos lokitiedosto on suuri, voidaan käyttää komentoa `sudo grep -i nmap access
 
 ## Wire sharking
 
+Valitaan loopback ja aletaan kuuntelemaan
+
 ![image](https://github.com/user-attachments/assets/4ca8e55c-1c37-4628-88be-1e7415e5e1a3)
+
+Uusi porttiskannaus
 
 ![image](https://github.com/user-attachments/assets/b89f6203-de12-4705-a958-346df8702423)
 
